<resources>
    <string name="app_name">Cryptocurrency Tracker</string>
    <string name="last_time_template">Last update time:</string>
    <string name="symbols_template">%s %s</string>
    <string name="price">Price:</string>
    <string name="day_min">Min per day:</string>
    <string name="day_max">Max per day:</string>
    <string name="last_deal_text">Last deal:</string>
    <string name="coin_logo">Cryptocurrency logo</string>
    <string name="network_error">No internet connection!</string>
    <string name="error_message">Something went wrong</string>
    <string name="coins_empty">No coins found. Try again later.</string>
    <string name="coins_loading">Coins are being loaded…</string>
    <string name="chart_empty">No chart data found. Try again later.</string>
    <string name="chart_loading">Chart are being loaded…</string>
    <string name="menu_option_coins">Watchlist</string>
    <string name="menu_option_news">News</string>
    <string name="slash">/</string>
</resources>