<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.air.crypto.presentation.coin_detail.CoinDetailFragment">

    <ImageView
        android:id="@+id/imageViewBackFromDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewCoinLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:contentDescription="@string/coin_logo"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundImageView"
        app:srcCompat="@drawable/disk" />

    <TextView
        android:id="@+id/textViewCoinFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewCoinLogo"
        tools:text="Bitcoin" />

    <TextView
        android:id="@+id/textViewCoinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCoinFullName"
        tools:text="BTC" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/coinHistoryChart"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCoinName" />

    <com.air.crypto.presentation.LoadingCardView
        android:id="@+id/chartLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@id/coinHistoryChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/coinHistoryChart" />

    <TextView
        android:id="@+id/chartEmptyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chart_empty"
        android:textAppearance="?attr/textAppearanceBody2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/coinHistoryChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/coinHistoryChart" />

    <TextView
        android:id="@+id/textViewPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/coinDetailGuideline"
        app:layout_constraintTop_toBottomOf="@id/coinHistoryChart" />

    <TextView
        android:id="@+id/textViewCurrentPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toTopOf="@+id/textViewPriceTitle"
        tools:text="5000.55" />

    <TextView
        android:id="@+id/textViewMinPerDayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_min"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewPriceTitle" />

    <TextView
        android:id="@+id/textViewMinPerDayPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toTopOf="@id/textViewMinPerDayTitle"
        tools:text="5050.5" />

    <TextView
        android:id="@+id/textViewMaxPerDayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_max"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewMinPerDayTitle" />

    <TextView
        android:id="@+id/textViewMaxPerDayPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toTopOf="@id/textViewMaxPerDayTitle"
        tools:text="7070.7" />

    <TextView
        android:id="@+id/textViewLastDealTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/last_deal_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewMaxPerDayTitle" />

    <TextView
        android:id="@+id/textViewLastDealMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toTopOf="@id/textViewLastDealTitle"
        tools:text="Bitfinex" />

    <TextView
        android:id="@+id/textViewUpdateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/last_time_template"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewLastDealTitle" />

    <TextView
        android:id="@+id/textViewUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/coinDetailGuideline"
        app:layout_constraintTop_toTopOf="@id/textViewUpdateTitle"
        tools:text="09:32:55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/coinDetailGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>